minor changes to interface

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
 	<script src="js/courseCtrl.js"></script>
 	<script src="js/courselistCtrl.js"></script>
 	<script src="js/departmentCtrl.js"></script>
+<!--	<script src="js/starCtrl.js"></script>	-->
 
   </head>
   <body>
