--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hating on school</title>
+    <title>Rating KTH</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -31,8 +31,8 @@
   <body>
 	<div class="container"> <!--Main container wrapping everything, including the partials -->
 		<!-- Header present on every page -->
-		<div class="page-header">
-	    	<h1><img src="http://goo.gl/rT8ndl" style="width:100px"> Rate you KTH course</h1>
+		<div class="page-header" style="background-color:#E6E6E6;padding:15px">
+	    	<h1 style="margin:0px"><img src="icon.png" style="width:80px"> Rate you KTH course</h1>
 		</div>
 		<div ng-view></div>
 	</div>
