--- a/app/index.html
+++ b/app/index.html
@@ -31,8 +31,8 @@
   <body>
 	<div class="container"> <!--Main container wrapping everything, including the partials -->
 		<!-- Header present on every page -->
-		<div class="page-header" style="background-color:#E6E6E6;padding:15px">
-	    	<h1 style="margin:0px"><img src="icon.png" style="width:80px"> Rate you KTH course</h1>
+		<div class="page-header" style="background-color:#E6E6E6;padding:15px" ng-click="#/start">
+	    	<h1 style="margin:0px"><img src="icon.png" style="width:80px" ng-click="#/start"> Rate you KTH course</h1>
 		</div>
 		<div ng-view></div>
 	</div>
